Correction to spacing between content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,7 @@ h1 {
     letter-spacing: 5px;
     text-transform: capitalize;
     text-align: center;
-    margin-top: 10%;
-    margin-bottom: 5%;
+    margin-top: 8.5%;
     border-bottom: 1px solid;
 }
 
@@ -161,7 +160,7 @@ header {
 .section-sizing {
     height: 650px;
     width: 100%;
-    margin-top: 5%;
+    margin-top: 3%;
     margin-bottom: 10%;
     overflow: hidden;
 }
@@ -553,7 +552,7 @@ footer {
     }
 
     .menu {
-        font-size: 70%;
+        font-size: 75%;
     }
 
     h1 {
